management_server/k8s_use/discovery/svc_web_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-web
  namespace: test
spec: 
  type: NodePort
  selector: 
    app: web
  ports: 
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080

---

apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: test
  labels: 
    app: web
spec: 
  containers:
  - name: web
    image: nginx
    imagePullPolicy: IfNotPresent
    ports: 
    - name: port0
      containerPort: 80
      # hostPort: 30080
